--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-        "way/generators": "dev-master"
+        "way/generators": "dev-master",
+        "dinesh/barcode": "dev-master"
 	},
     "require-dev": {
         "fzaninotto/faker": "dev-master"
