--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"require": {
 		"laravel/framework": "4.1.*",
         "way/generators": "dev-master",
+        "pda/pheanstalk": "dev-master",
         "dinesh/barcode": "dev-master"
 	},
     "require-dev": {
