Added Composer Beanstalk

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		"laravel/framework": "4.1.*",
         "way/generators": "dev-master",
         "iron-io/iron_mq": "dev-master",
+        "pda/pheanstalk": "dev-master",
         "dinesh/barcode": "dev-master"
 	},
     "require-dev": {
