--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
 	"require": {
 		"laravel/framework": "4.1.*",
         "way/generators": "dev-master",
-        "iron-io/iron_mq": "dev-master",
-        "pda/pheanstalk": "dev-master",
-        "dinesh/barcode": "dev-master"
+        "iron-io/iron_mq": "dev-master"
 	},
     "require-dev": {
         "fzaninotto/faker": "dev-master",
